--- a/filters/tatari/sandbox/sandbox.scss
+++ b/filters/tatari/sandbox/sandbox.scss
@@ -1,8 +1,3 @@
-.dropdownContainer {
-  margin-right: 10px;
-  vertical-align: top;
-}
-
-.clearAllFilters {
-  line-height: 30px;
+.filterContainer {
+  padding: 50px;
 }
