--- a/filters/tatari/src/Tatari.scss
+++ b/filters/tatari/src/Tatari.scss
@@ -121,7 +121,7 @@ $searchH: 20px;
   background-size: 16px 16px;
   height: $h;
   margin-left: auto;
-  width: $h;
+  min-width: $h;
 }
 
 .inactiveItem {
