--- a/filters/tatari/src/Tatari.scss
+++ b/filters/tatari/src/Tatari.scss
@@ -1,5 +1,3 @@
-@import "./variables";
-
 $h: 30px;
 $p: 10px;
 $delay: 0.2s;
@@ -17,7 +15,6 @@ $searchH: 20px;
 }
 
 .clearAllFilters {
-  color: #1e519f;
   cursor: pointer;
   line-height: $h;
   margin-left: 20px;
@@ -25,7 +22,6 @@ $searchH: 20px;
   padding: 0;
 
   &:hover {
-    color: palette(orange);
     text-decoration: underline;
   }
 }
@@ -35,7 +31,7 @@ $searchH: 20px;
   margin-right: 10px;
   line-height: $h;
   opacity: 1;
-  transition: all 0.2s ease;
+  // transition: all 0.2s ease;
   width: 200px;
 
   // &.hiding {
@@ -79,6 +75,7 @@ $searchH: 20px;
 
 .dropdownTitle {
   overflow: hidden;
+  padding: 0 2px;
   text-align: left;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -140,7 +137,7 @@ $searchH: 20px;
   padding: 0 $p;
 
   &:hover {
-    background: #eee;
+    background: #e7e7e7;
   }
 }
 
@@ -196,22 +193,24 @@ $searchH: 20px;
   display: flex;
   flex-direction: row;
   padding: 0 $p;
+
+  &:hover {
+    background: #e7e7e7;
+  }
 }
 
 .activeControl {
   background: none;
   border: 0;
-  color: #1e519f;
   cursor: pointer;
   font-size: 13px;
   line-height: 20px;
   margin: 0 3px;
-  padding: 0 !important;
+  padding: 0;
   vertical-align: top;
 
   &:hover {
-    color: palette(orange) !important;
-    text-decoration: underline !important;
+    text-decoration: underline;
   }
 
   &:focus {
@@ -231,7 +230,7 @@ $searchH: 20px;
   padding: 0 $p;
 
   &:hover {
-    background: #eee;
+    background: #e7e7e7;
   }
 }
 
